--- a/about.html
+++ b/about.html
@@ -45,7 +45,7 @@
 			
 		</div>
 		<div class="nav-mobile" id="nav-mobile">
-			<a href="#top" class="mobile-nav-link tooltip">Home</a>
+			<a href="./index.html" class="mobile-nav-link tooltip">Home</a>
 			<a href="#about" class="mobile-nav-link tooltip">Sobre Nós</a>
 			<a href="#courses" class="mobile-nav-link tooltip">Benefícios</a>
 			<a href="#contact" class="tooltip">
@@ -55,8 +55,9 @@
 	</header>
 	
 	<main>
-		<section class="about-container">
-			<div class="parallax-about">
+		
+		<section>
+			<div class="parallax-container">
 					<div class="parallax"><img src="img/class-img.jpeg"></div>
 					<p>Programas eficazes, com foco em conversação e fluência</p>
 			</div>
@@ -64,11 +65,13 @@
 			<div id="about" class="section_info">
 				<div class="row container">
 					<h2 class="header">Sobre</h2>
-					<!-- <h3>Algum Título</h3> -->
-					<p class="paragrafo">Marina Melo, possui licenciatura em Letras, certificados de Cambridge de proficiência da língua inglesa e certificados de Cambridge TKT (Teaching Knowledge Test). Além de sua formação acadêmica, possui profundo conhecimento prático da língua inglesa, adquirido durante quase 7 (sete) anos em que residiu na cidade de Londres. <br> <br>
-						Após trabalhar vários anos em escolas de idiomas, adquiriu certa frustração neste ambiente, devido ao fato de não poder oferecer um atendimento individualizado a cada um dos alunos, que sempre estavam limitados a planos de aulas generalizados e impessoais, quase sempre em turmas com elevado número de pessoas. <br><br>
-						
-						Neste contexto, surgiu a ideia de criar <span class="feat-reverse">You Can! English Courses</span>. A escola foi estabelecida em maio de 2015 em Franca/SP com uma proposta diferenciada: aulas de inglês personalizadas, individuais ou para pequenos grupos, com no máximo três alunos por horário.</p>
+					<div class="about-container">
+						<p class="paragrafo">Marina Melo, possui licenciatura em Letras, certificados de Cambridge de proficiência da língua inglesa e certificados de Cambridge TKT (Teaching Knowledge Test). Além de sua formação acadêmica, possui profundo conhecimento prático da língua inglesa, adquirido durante quase 7 (sete) anos em que residiu na cidade de Londres.</p>
+
+							<p>Após trabalhar vários anos em escolas de idiomas, adquiriu certa frustração neste ambiente, devido ao fato de não poder oferecer um atendimento individualizado a cada um dos alunos, que sempre estavam limitados a planos de aulas generalizados e impessoais, quase sempre em turmas com elevado número de pessoas.</p>
+							
+							<p>Neste contexto, surgiu a ideia de criar <span class="feat-reverse">You Can! English Courses</span>. A escola foi estabelecida em maio de 2015 em Franca/SP com uma proposta diferenciada: aulas de inglês personalizadas, individuais ou para pequenos grupos, com no máximo três alunos por horário.</p>
+					</div>
 					</div>
 			</div>
 			<div class="about-img">
