--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 		</div>
 		<div class="nav-mobile" id="nav-mobile">
 			<a href="#top" class="mobile-nav-link tooltip">Home</a>
-			<a href="#about" class="mobile-nav-link tooltip">Sobre Nós</a>
+			<a href="./about.html" class="mobile-nav-link tooltip">Sobre Nós</a>
 			<a href="#courses" class="mobile-nav-link tooltip">Benefícios</a>
 			<a href="./achievements.html" class="mobile-nav-link tooltip">Conquistas</a>			
 			<a href="#contact" class="tooltip">
@@ -59,50 +59,49 @@
 	</header>
 	
 	<main>
-		
 		<section>
 			<div id="top" class="section_info">
 				<div class="row container">
 					<p id="slogan">Aprenda <span class="feature">Inglês</span> e cultura de maneira prazerosa. <br>
 						Agende já uma <span class="feature">aula</span> experimental sem compromisso e venha conhecer nosso <span class="feature">diferencial!</span> </p>
 				</div>
-		</div>
-				<div class="parallax-container">
-					<div class="parallax"><img src="img/london.jpeg"></div>
-					<p>Programas eficazes, com foco em conversação e fluência</p>
-				</div>
-			</section>
-			<section>
-				<div id="about" class="section_info">
-					<div class="row container">
-						<h2 class="header">Seja um aluno</h2>
-						<div class="step-container">	
-							<div class="step-item">
-								<img src="img/icons/phone.png" alt="">
-								<h3>1. Entre em Contato</h3>
-								<p>Preencha nosso formulário de contato, telefone ou nos envie um e-mail. Estamos esperando por você.</p>
-							</div>
-							<div class="step-item">
-								<img src="img/icons/apple.png" alt="">
-								<h3>2. Aula experimental</h3>
-								<p>Agendaremos uma aula exeperimental, onde o aluno conhecerá nossos métodos e vantagens.</p>
-							</div>
-							<div class="step-item">
-								<img src="img/icons/globe.png" alt="">
-								<h3>3. Aproveite a aula</h3>
-								<p>Receba aulas personalizadas, com materiais atualizados e de alta qualidade. Enjoy the class!</p>
-							</div>
+			</div>
+			<div class="parallax-container">
+				<div class="parallax"><img src="img/london.jpeg"></div>
+				<p>Programas eficazes, com foco em conversação e fluência</p>
+			</div>
+		</section>
+		<section>
+			<div id="about" class="section_info">
+				<div class="row container">
+					<h2 class="header">Seja um aluno</h2>
+					<div class="step-container">	
+						<div class="step-item">
+							<img src="img/icons/phone.png" alt="">
+							<h3>1. Entre em Contato</h3>
+							<p>Preencha nosso formulário de contato, telefone ou nos envie um e-mail. Estamos esperando por você.</p>
 						</div>
-						<a href="#contact" class="tooltip">
-							<button class="btn-contact">Seja um aluno</button>
-						</a>
+						<div class="step-item">
+							<img src="img/icons/apple.png" alt="">
+							<h3>2. Aula experimental</h3>
+							<p>Agendaremos uma aula exeperimental, onde o aluno conhecerá nossos métodos e vantagens.</p>
+						</div>
+						<div class="step-item">
+							<img src="img/icons/globe.png" alt="">
+							<h3>3. Aproveite a aula</h3>
+							<p>Receba aulas personalizadas, com materiais atualizados e de alta qualidade. Enjoy the class!</p>
+						</div>
 					</div>
+					<a href="#contact" class="tooltip">
+						<button class="btn-contact">Seja um aluno</button>
+					</a>
 				</div>
-				<div class="parallax-container">
-					<div class="parallax"><img src="img/world.jpeg"></div>
-					<p>Domine o idioma inglês e tenha o mundo em suas mãos</p>
-				</div>
-			</section>
+			</div>
+			<div class="parallax-container">
+				<div class="parallax"><img src="img/world.jpeg"></div>
+				<p>Domine o idioma inglês e tenha o mundo em suas mãos</p>
+			</div>
+		</section>
 			<section>
 				<div id="courses" class="section_info">
 					<div class="row container" id="courses-p">
