fix everything but the parallax-container of about.html

--- a/about.html
+++ b/about.html
@@ -58,8 +58,7 @@
 		
 		<section>
 			<div class="parallax-container">
-					<div class="parallax"><img src="img/class-img.jpeg"></div>
-					<p>Programas eficazes, com foco em conversação e fluência</p>
+					<div class="parallax-about"><img src="img/class.jpeg"></div>
 			</div>
 			
 			<div id="about" class="section_info">
@@ -72,12 +71,19 @@
 							
 							<p>Neste contexto, surgiu a ideia de criar <span class="feat-reverse">You Can! English Courses</span>. A escola foi estabelecida em maio de 2015 em Franca/SP com uma proposta diferenciada: aulas de inglês personalizadas, individuais ou para pequenos grupos, com no máximo três alunos por horário.</p>
 					</div>
-					</div>
+				</div>
+				<div class="about-img">
+					<img src="img/class.jpeg">
+					<img src="img/class.jpeg">
+					<br>
+				</div>
+				<a href="#contact" class="tooltip">
+					<button class="btn-contact">Matricule-se já</button>
+				</a>
 			</div>
-			<div class="about-img">
-				<img src="img/class.jpeg">
-				<img src="img/class.jpeg">
-			</div>
+
+			<br>
+			<br>
 		</section>
 		</main>
 		
