fix about.html parallax-img

--- a/about.html
+++ b/about.html
@@ -57,8 +57,8 @@
 	<main>
 		
 		<section>
-			<div class="parallax-container">
-					<div class="parallax-about"><img src="img/class.jpeg"></div>
+			<div class="parallax-about">
+					<div><img src="img/class.jpeg"></div>
 			</div>
 			
 			<div id="about" class="section_info">
