finish about.html

--- a/about.html
+++ b/about.html
@@ -58,7 +58,7 @@
 		
 		<section>
 			<div class="parallax-about">
-					<div><img src="img/class.jpeg"></div>
+					<div><img src="img/school/teach.jpeg"></div>
 			</div>
 			
 			<div id="about" class="section_info">
@@ -73,8 +73,8 @@
 					</div>
 				</div>
 				<div class="about-img">
-					<img src="img/class.jpeg">
-					<img src="img/class.jpeg">
+					<img src="img/school/classroom.jpeg">
+					<img src="img/school/chairs.jpeg">
 					<br>
 				</div>
 				<a href="#contact" class="tooltip">
