sets the footer links in both pages

--- a/about.html
+++ b/about.html
@@ -94,11 +94,10 @@
 			</div>
 			<div>
 				<section class="foot-links">
-					<p>Home</p>
-					<p>Sobre Nós</p>
-					<p>Benefícios</p>
-					<p>A Escola</p>
-					<p>Contato</p>
+					<p><a href="./index.html" class="footer-nav-link tooltip">Home</a></p>
+					<p> <a href="#about" class="footer-nav-link tooltip">Sobre nós</a> </p>
+					<p> <a href="./index.html#courses" class="footer-nav-link tooltip">Benefícios</a></p>
+					<p> <a href="./index.html#contact" class="footer-nav-link tooltip">Contato</a></p>
 				</section>	
 			</div>
 			<div>
