--- a/index.html
+++ b/index.html
@@ -103,6 +103,7 @@
 			</div>
 		</section>
 			<section>
+				<a id="courses-link"></a>
 				<div id="courses" class="section_info">
 					<div class="row container" id="courses-p">
 						<h2 class="header">Benefícios</h2>
@@ -195,11 +196,11 @@
 	</div>
 	<div>
 		<section class="foot-links">
-			<p>Home</p>
-			<p>Sobre Nós</p>
-			<p>Benefícios</p>
-			<p>A Escola</p>
-			<p>Contato</p>
+			<p><a href="#top" class="tooltip footer-nav-link">Home</a></p>
+			<p><a href="./about.html" class="footer-nav-link tooltip">Sobre Nós</a></p>
+			<p><a href="#courses" class="footer-nav-link tooltip">Benefícios</a></p>
+			<!-- <p>Conquistas</p> -->
+			<p><a href="#contact" class="footer-nav-link tooltip">Contato</a></p>
 		</section>	
 	</div>
 	<div>
